--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
-include ':videorecorder_library', ':videorecorder_test'
+include ':videorecorder_library', ':videorecorder_test', ':imageviewer_library', ':imageviewer_test'
 
