--- a/videoplayer_test/src/main/AndroidManifest.xml
+++ b/videoplayer_test/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.opensource.videoplayer.test" >
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -34,6 +35,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name="com.opensource.videoplayer.PlayerActivity" />
     </application>
 
 </manifest>
