--- a/settings.gradle
+++ b/settings.gradle
@@ -16,5 +16,5 @@
  * limitations under the License.
  */
 
-include ':videorecorder_library', ':videorecorder_test', ':videoplayer_libary', ':videoplayer_test'
+include ':videorecorder_library', ':videorecorder_test', ':videoplayer_library', ':videoplayer_test'
 
