--- a/videoplayer_library/build.gradle
+++ b/videoplayer_library/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "19.0.3"
 
     defaultConfig {
-        minSdkVersion 1
+        minSdkVersion 7
         targetSdkVersion 19
         versionCode 1
         versionName "1.0"
@@ -20,4 +20,5 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:appcompat-v7:19.+'
 }
