--- a/videoplayer_library/src/main/AndroidManifest.xml
+++ b/videoplayer_library/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <application android:allowBackup="true"
         android:label="@string/app_name"
         android:icon="@drawable/ic_launcher">
-        <activity android:name="com.opensource.videoplayer.MovieActivity"/>
+        <activity android:name=".VideoActivity"/>
     </application>
 
 </manifest>
