--- a/videoplayer_test/build.gradle
+++ b/videoplayer_test/build.gradle
@@ -21,4 +21,5 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:19.+'
+    compile project(':videoplayer_library')
 }
