--- a/OpenCamera_Test/build.gradle
+++ b/OpenCamera_Test/build.gradle
@@ -16,14 +16,16 @@
  * limitations under the License.
  */
 
-apply plugin: 'android-library'
+
+
+apply plugin: 'android'
 
 android {
     compileSdkVersion 19
-    buildToolsVersion "19.0.3"
+    buildToolsVersion '19.0.3'
 
     defaultConfig {
-        minSdkVersion 8
+        minSdkVersion 10
         targetSdkVersion 19
         versionCode 1
         versionName "1.0"
@@ -37,6 +39,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:19.+'
+    compile project(':OpenCamera_Library')
 }
