--- a/OpenCamera_Library/src/main/AndroidManifest.xml
+++ b/OpenCamera_Library/src/main/AndroidManifest.xml
@@ -17,12 +17,11 @@
   -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.opensource.videorecorder">
+    package="com.opensource.opencamera">
 
     <application 
         android:label="@string/app_name"
-        android:icon="@drawable/ic_launcher"
->
+        android:icon="@drawable/ic_launcher" >
 
     </application>
 
