--- a/VideoPlayer_Test/src/main/AndroidManifest.xml
+++ b/VideoPlayer_Test/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
   -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.opensource.movieplayer.test" >
+    package="com.opensource.videoplayer.test" >
 
     <uses-sdk android:minSdkVersion="8"
         android:targetSdkVersion="19" />
