--- a/MagicCamcorder/src/main/AndroidManifest.xml
+++ b/MagicCamcorder/src/main/AndroidManifest.xml
@@ -17,13 +17,13 @@
   -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.qd.videorecorder"
+    package="com.opensource.magiccamcorder"
     android:versionCode="1"
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="14"
-        android:targetSdkVersion="17" />
+        android:minSdkVersion="9"
+        android:targetSdkVersion="19" />
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
